syntax = "proto3";

package org.project_planton.provider.gcp.gcpsecretsmanager.v1;

import "buf/validate/validate.proto";
import "org/project_planton/shared/foreignkey/v1/foreign_key.proto";

// **GcpSecretsManagerSpec** defines the configuration for managing secrets using Google Cloud Secrets Manager.
// This message specifies the parameters required to create and manage secrets within a specified GCP project.
// By providing the project ID and a list of secret names, you can automate the creation and handling of secrets,
// enabling secure storage and access control for sensitive information like API keys, passwords, and certificates.
message GcpSecretsManagerSpec {
  // The GCP project ID where the secrets will be created.
  // Can be provided as a literal value or as a reference to another resource's output.
  // Example (literal): {value: "my-gcp-project-123456"}
  // Example (reference): {value_from: {kind: GcpProject, name: "main-project"}}
  org.project_planton.shared.foreignkey.v1.StringValueOrRef project_id = 1 [
    (buf.validate.field).required = true,
    (org.project_planton.shared.foreignkey.v1.default_kind) = GcpProject,
    (org.project_planton.shared.foreignkey.v1.default_kind_field_path) = "status.outputs.project_id"
  ];

  // A list of secret names to create in Google Cloud Secrets Manager.
  // Each name represents a unique secret that can store sensitive data securely.
  repeated string secret_names = 2;
}
