syntax = "proto3";

package project.planton.provider.gcp.gcpsecretsmanager.v1;

import "buf/validate/validate.proto";
import "project/planton/provider/gcp/gcpsecretsmanager/v1/spec.proto";
import "project/planton/provider/gcp/gcpsecretsmanager/v1/stack_outputs.proto";
import "project/planton/shared/status.proto";
import "project/planton/shared/metadata.proto";

//gcp-secrets-manager
message GcpSecretsManager {
  //api-version
  string api_version = 1[
    (buf.validate.field).string.const = 'gcp.project-planton.org/v1'
  ];

  //resource-kind
  string kind = 2 [
    (buf.validate.field).string.const = 'GcpSecretsManager'
  ];

  //metadata
  project.planton.shared.ApiResourceMetadata metadata = 3 [
    (buf.validate.field).required = true
  ];

  //spec
  GcpSecretsManagerSpec spec = 4 [
    (buf.validate.field).required = true
  ];

  //status
  GcpSecretsManagerStatus status = 5;
}

//gcp-secrets-manager status
message GcpSecretsManagerStatus {
  //stack-outputs
  GcpSecretsManagerStackOutputs outputs = 1;
}
